--- a/index.html
+++ b/index.html
@@ -30,19 +30,19 @@
                 <h2>Мои навыки</h2>
                 <table class="table">            
                     <tr>
-                        <td><img src="pictures/html.png" alt="html" class="png-logo"></td>
-                        <td><img src="pictures/css.png" alt="css" class="png-logo"></td>
-                        <td><img src="pictures/js.png" alt="js" class="png-logo"></td>
+                        <td align="center"><img src="pictures/html.png" alt="html" class="png-logo"></td>
+                        <td align="center"><img src="pictures/css.png" alt="css" class="png-logo"></td>
+                        <td align="center"><img src="pictures/js.png" alt="js" class="png-logo"></td>
                     </tr>    
                     <tr>
-                        <td><img src="pictures/django.png" alt="django" class="png-logo"></td>
-                        <td><img src="pictures/py.png" alt="python" class="png-logo"></td>
-                        <td><img src="pictures/flask.png" alt="flask" class="png-logo"></td>
+                        <td align="center"><img src="pictures/django.png" alt="django" class="png-logo"></td>
+                        <td align="center"><img src="pictures/py.png" alt="python" class="png-logo"></td>
+                        <td align="center"><img src="pictures/flask.png" alt="flask" class="png-logo"></td>
                     </tr>
                     <tr>
-                        <td><img src="pictures/docker.png" alt="docker" class="png-logo"></td>
-                        <td><img src="pictures/Git.png" alt="GIT" class="png-logo"></td>
-                        <td><img src="pictures/postgres.png" alt="postgresql" class="png-logo"></td>
+                        <td align="center"><img src="pictures/docker.png" alt="docker" class="png-logo"></td>
+                        <td align="center"><img src="pictures/Git.png" alt="GIT" class="png-logo"></td>
+                        <td align="center"><img src="pictures/postgres.png" alt="postgresql" class="png-logo"></td>
                     </tr>                                        
                 </table>
             </div>
