--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             <div class="info">
                 <img src="https://www.meme-arsenal.com/memes/98f4a451305fcd6aa7bbe237ae43aa3c.jpg" alt="котик" class="avatar"/>
                 <div class="info-text">                    
-                    <h1>Петровский Сергей</h1>
+                    <h1>Petrovsky Sergey</h1>
                     <p>Программист на языке Python</p>
                     <p>Я люблю программировать, заниматься спортом</p>
                     <h4>Мои социальные сети</h4>                    
@@ -21,9 +21,9 @@
             <div class="card bg-yellow">
                 <h2>Мои хобби</h2>
                 <ol class="list">
-                    <li>конструирование</li>
+                    <li>Конструирование</li>
                     <li>Сноуборд</li>
-                    <li>быстрая езда на авто</li>
+                    <li>Быстрая езда на авто</li>
                 </ol>
             </div>            
             <div class="card bg-green">
