--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                     <p>Программист на языке Python</p>
                     <p>Я люблю программировать, заниматься спортом</p>
                     <h4>Мои социальные сети</h4>                    
-                        <a href="https://instagram.com" target="_blank">Instagram</a>                    |
+                        <a href="https://www.instagram.com/_s.petrovsky_/" target="_blank">Instagram</a>                    |
                         <a href="https://t.me" target="_blank">Telegram</a>
                 </div>               
             </div>          
