--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             <div class="info">
                 <img src="https://www.meme-arsenal.com/memes/98f4a451305fcd6aa7bbe237ae43aa3c.jpg" alt="котик" class="avatar"/>
                 <div class="info-text">                    
-                    <h1>Petrovsky Sergey</h1>
+                    <h1>Петровский Сергей</h1>
                     <p>Программист на языке Python</p>
                     <p>Я люблю программировать, заниматься спортом</p>
                     <h4>Мои социальные сети</h4>                    
