--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body>
         <div class="conteiner">
             <div class="info">
-                <img src="https://www.meme-arsenal.com/memes/98f4a451305fcd6aa7bbe237ae43aa3c.jpg" alt="котик" class="avatar"/>
+                <img src="pictures/avatar.jpg" alt="cat" class="avatar">
                 <div class="info-text">                    
                     <h1>Петровский Сергей</h1>
                     <p>Программист на языке Python</p>
