update my youtube

--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
                 </table>
             </div>
             <div class="card bg-red">
-                <h2>Youtube курсы</h2>
+                <h2>Youtube</h2>
                 <ul class="link-list">
                     <li>
-                       <a href="">ссылка на youtube</a>
+                       <a href="https://www.youtube.com/channel/UCuRv5p2dTs1BS_6G91Tq_TQ" target="blank">ссылка на youtube</a>
                     </li>
                  </ul>
             </div>
