--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             <div class="info">
                 <img src="pictures/avatar.jpg" alt="cat" class="avatar">
                 <div class="info-text">                    
-                    <h1>Петровский Сергей</h1>
+                    <h1>Petrovsky Sergey</h1>
                     <p>Программист на языке Python</p>
                     <p>Я люблю программировать, заниматься спортом</p>
                     <h4>Мои социальные сети</h4>                    
